--- a/lana/email.html
+++ b/lana/email.html
@@ -139,12 +139,13 @@
               <h3>Get help with an account</h3>
               <ul class="list-unstyled lst-spcd">
                 <!--<li><a href="/content/canadasite/en/revenue-agency/services/tax/individuals/topics/about-your-tax-return/change-your-address.html">Change of address</a> at Canada Revenue Agency</li> -->
-                <li>CRA - <a href="https://www.canada.ca/en/revenue-agency/corporate/contact-information.html">My Account or My Business Account</a> <mark>changed link</mark></li>
+                <li>CRA - <a href="https://www.canada.ca/en/revenue-agency/services/e-services/digital-services-individuals/account-individuals.html">My Account for Individuals</a> </li>
+                <li>CRA - <a href="https://www.canada.ca/en/revenue-agency/services/e-services/digital-services-businesses/business-account.html">My Business Account</a> </li>
+
                 <li>MSAC - <a href="https://www.canada.ca/en/employment-social-development/services/my-account/multi-factor-authentication.html">My Service Canada Account</a><mark>We could link to the help section if there was an anchor</mark></li>
   <li> <mark>new</mark><a href="https://www.canada.ca/en/government/sign-in-online-account.html">Find other accounts by department or program</li>
 
 
-  <li> <mark>new</mark> <a href="https://www.canada.ca/en/public-services-procurement/services/payments-to-from-government/direct-deposit.html">Change your address or banking information</a></li>
 
 
                 <li><a href="/en/employment-social-development/corporate/portfolio/service-canada/fraud.html">Fake text messages and calls</a></li>
@@ -155,14 +156,15 @@
               </ul>
             </section>
             <section class="col-lg-6 col-md-6">
-              <h3>Programs and services</h3> <mark>Now pointing to the program contact pages</mark>
+              <h3>Get help with programs and services</h3> <mark>Now pointing to the program contact pages</mark>
               <ul class="list-unstyled lst-spcd">
             <!--    <li><a href="/en/services/benefits/dental.html">Canadian Dental Care Plan</a></li>
                 <li><a href="/en/immigration-refugees-citizenship/services/canadian-passports.html">Get a passport</a></li>
                 <li><a href="/en/services/benefits/publicpensions.html">Public pensions (CPP and OAS)</a> </li>
                 <li><a href="/en/services/benefits/ei.html">Employment Insurance (EI)</a> and other support</li>-->
 
-  <li><a href="https://www.canada.ca/en/services/benefits/dental/dental-care-plan/contact.html">Canadian Dental Care Plan</a></li>
+<li><a href="https://www.canada.ca/en/revenue-agency/corporate/contact-information.html">Follow up on my case with CRA</a></li>
+  <li><a href="https://www.canada.ca/en/services/benefits/dental/dental-care-plan/contact.html">Canadian Dental Care Plan</a><mark>low traffic - remove?</mark></li>
                 <li><a href="https://www.canada.ca/en/immigration-refugees-citizenship/services/canadian-passports/contact-passport-program.html">Passports for Canadians</a></li>
                 <li><a href="https://www.canada.ca/en/employment-social-development/corporate/contact/ei-individual.html">Employment Insurance (<abbr>EI</abbr>)</a></li>
                 <li><a href="https://www.canada.ca/en/employment-social-development/corporate/contact/cpp.html">Canada Pension Plan (<abbr>CPP</abbr>)</a></li>
@@ -208,7 +210,7 @@
     <mark>why was the form in an expando?</mark>
     <section id="commentform">
 
-      <h3><mark>For help with your file or application/<mark></h3>
+      <h3><mark>Get help with your file or application<mark></h3>
       <p><mark>Case specific questions</mark>  <strong>must be directed</strong> to the program.</p>
       <p> <a href="/en/contact.html">Find contacts by department or program</a>.</p>
       <h3>Service hours</h3>
