--- a/jmtesting/follow-us-more/more.html
+++ b/jmtesting/follow-us-more/more.html
@@ -194,7 +194,7 @@
 			<a href="#" rel="external" class="linkedin"><span class="wb-inv">LinkedIn: </span>LinkedInName</a>
 		</li>
 	</ul>
-	<p><a href="">More ways to connect</a></p>
+	<p><a href="" style="font-size: 87%; font-weight: bold;">More ways to connect</a></p>
 
 </section>
 
