--- a/jmtesting/follow-us-more/more.html
+++ b/jmtesting/follow-us-more/more.html
@@ -178,19 +178,19 @@
 <h2 class="mrgn-bttm-lg">Horizontal layout</h2><section class="gc-followus">
 	<h2>On social media</h2>
 	<ul class="list-inline" style="margin-bottom: 0px;">
-		<li>
+		<li style="margin-bottom: 0px;">
 			<a href="#facebook" class="facebook wb-lbx"><span class="wb-inv">Facebook: </span>FacebookPageName</a>
 		</li>
-		<li>
+		<li style="margin-bottom: 0px;">
 			<a href="#" rel="external" class="x-social"><span class="wb-inv">X: </span>@XAccount</a>
 		</li>
-		<li>
+		<li style="margin-bottom: 0px;">
 			<a href="#" rel="external" class="youtube"><span class="wb-inv">Youtube: </span>YouTubeName</a>
 		</li>
-		<li>
+		<li style="margin-bottom: 0px;">
 			<a href="#" rel="external" class="instagram"><span class="wb-inv">Instagram: </span>InstagramName</a>
 		</li>
-		<li>
+		<li style="margin-bottom: 0px;">
 			<a href="#" rel="external" class="linkedin"><span class="wb-inv">LinkedIn: </span>LinkedInName</a>
 		</li>
 	</ul>
