--- a/jmtesting/design-canada/index.html
+++ b/jmtesting/design-canada/index.html
@@ -132,12 +132,12 @@
 				<meta property="position" content="1">
 			</li>
 			
-						<li property="itemListElement" typeof="ListItem">
+						<!-- <li property="itemListElement" typeof="ListItem">
 							<a property="item" typeof="WebPage" href="https://design.canada.ca/about/">
 								<span property="name">About Canada.ca</span>
 							</a>
 							<meta property="position" content="2">
-						</li>
+						</li> -->
 						
 		</ol>
 	</div>
@@ -147,25 +147,21 @@
 </header>
 
 		<main class="container" property="mainContentOfPage" resource="#wb-main" typeof="WebPageElement">
-<h1 property="name headline" id="wb-cont" dir="ltr">Canada.ca design system</h1>
-<p>Use this design system to provide a more usable, consistent and trustworthy online experience for people who access Government of Canada digital services.</p>
+<h1 property="name headline" id="wb-cont" dir="ltr">Designing for Canada.ca</h1>
+<p>Mandatory elements for Canada.ca, writing principles, how to organize your content to make it easy-to-find, optimizing web content, evidence for and research on design choices.</p>
 <section>
   <div class="row">
     <section class="wb-eqht gc-drmt">
       <div class="col-md-4">
-        <h3 class="h5"><a href="/pattern-library.html">Template and design pattern library</a></h3>
-        <p>User-tested templates, page layouts, design patterns, guidelines, and code samples</p>
+        <h3 class="h5"><a href="/specifications.html">Canada.ca specifications</a></h3>
+        <p>Who has to use the Canada.ca design, mandatory elements, design principles, information architecture and findability, templates and patterns</p>
       </div>
       <div class="col-md-4">
-        <h3 class="h5"><a href="/style-guide/">Canada.ca Content Style guide</a></h3>
+        <h3 class="h5"><a href="https://design.canada.ca/style-guide/">Canada.ca Content Style guide</a></h3>
         <p>Writing principles and techniques to make content clear and accessible to all</p>
       </div>
       <div class="col-md-4">
-        <h3 class="h5"><a href="/architecture/canada-content-information-architecture-specification.html">Canada.ca Content and Information Architecture Specification</a></h3>
-        <p>Who has to use the Canada.ca design system, mandatory elements, how to organize content and design principles</p>
-      </div>
-      <div class="col-md-4">
-        <h3 class="h5"><a href="/continuous-improvement.html">Continuous improvement of web content </a></h3>
+        <h3 class="h5"><a href="https://design.canada.ca/continuous-improvement.html">Continuous improvement of web content</a></h3>
         <p>Choosing what to improve, organizing and preparing your team, research and prototyping, designing content, monitoring and measuring success</p>
       </div>
       <div class="col-md-4">
@@ -173,13 +169,17 @@
         <p>Evidence and insights on improving information and services on Canada.ca</p>
       </div>
       <div class="col-md-4">
-        <h3 class="h5"><a href="/about/latest-changes.html">Latest changes to the Canada.ca design system</a></h3>
-        <p>Latest changes to the design system, templates and patterns, style guide and other tools</p>
+        <h3 class="h5"><a href="">Research summaries</a></h3>
+        <p>Research done to make it easier for people to find and understand Government of Canada information and services</p>
+      </div>
+	  <div class="col-md-4">
+        <h3 class="h5"><a href="https://design.canada.ca/about/">About Canada.ca</a></h3>
+        <p>Most requested, analytics for Canada.ca, Government of Canada contacts</p>
       </div>
     </section>
   </div>
 </section>
-<section>
+<!-- <section>
   <h2>Find guidance</h2>
   <div class="row mrgn-tp-md">
     <div class="col-md-3 small">
@@ -271,12 +271,12 @@
       </div>
     </div>
   </div>
-</section>
+</section> -->
 
 <section class="pagedetails">
 	<h2 class="wb-inv">Page details</h2><dl id="wb-dtmd">
 	<dt>Date modified:</dt>
-	<dd><time property="dateModified">2023-08-19</time></dd>
+	<dd><time property="dateModified">2024-07-15</time></dd>
 </dl>
 </section>
 
