--- a/jmtesting/design-canada/specifications.html
+++ b/jmtesting/design-canada/specifications.html
@@ -131,10 +131,10 @@
 				</a>
 				<meta property="position" content="1">
 			</li>
-			
-						<!-- <li property="itemListElement" typeof="ListItem">
-							<a property="item" typeof="WebPage" href="https://design.canada.ca/about/">
-								<span property="name">About Canada.ca</span>
+<!-- 			
+						<li property="itemListElement" typeof="ListItem">
+							<a property="item" typeof="WebPage" href="/index.html">
+								<span property="name">Designing for Canada.ca</span>
 							</a>
 							<meta property="position" content="2">
 						</li> -->
@@ -147,132 +147,52 @@
 </header>
 
 		<main class="container" property="mainContentOfPage" resource="#wb-main" typeof="WebPageElement">
-<h1 property="name headline" id="wb-cont" dir="ltr">Designing for Canada.ca</h1>
-<p>Mandatory elements for Canada.ca, writing principles, how to organize your content to make it easy-to-find, optimizing web content, evidence for and research on design choices.</p>
+				<!-- Custom code starts here --><h1 property="name" id="wb-cont" property="name headline" dir="ltr">
+					<span class="stacked">
+						<span>Canada.ca specifications</span>: <span></span>
+					</span>
+				</h1><!-- Custom code ends here -->
+<p>The Canada.ca design helps to provide a consistent and trustworthy online experience for people who access Government of Canada digital services.</p>
 <section>
   <div class="row">
     <section class="wb-eqht gc-drmt">
       <div class="col-md-4">
-        <h3 class="h5"><a href="./specifications.html">Canada.ca specifications</a></h3>
-        <p>Who has to use the Canada.ca design, mandatory elements, design principles, information architecture and findability, templates and patterns</p>
+        <h3 class="h5"><a href="https://design.canada.ca/architecture/usage-canadaca-design.html">Who has to use the Canada.ca design</a></h3>
+        <p>Scope of the Canada.ca design</p>
       </div>
       <div class="col-md-4">
-        <h3 class="h5"><a href="https://design.canada.ca/style-guide/">Canada.ca Content Style guide</a></h3>
-        <p>Writing principles and techniques to make content clear and accessible to all</p>
+        <h3 class="h5"><a href="https://design.canada.ca/architecture/mandatory-elements.html">Mandatory elements</a></h3>
+        <p>Colours, typography, header and footer, mandatory templates</p>
       </div>
       <div class="col-md-4">
-        <h3 class="h5"><a href="https://design.canada.ca/continuous-improvement.html">Continuous improvement of web content</a></h3>
-        <p>Choosing what to improve, organizing and preparing your team, research and prototyping, designing content, monitoring and measuring success</p>
+        <h3 class="h5"><a href="https://design.canada.ca/architecture/templates.html">Design principles</a></h3>
+        <p>Using evidence to design people-first and task-centred experiences.</p>
       </div>
       <div class="col-md-4">
-        <h3 class="h5"><a href="https://blog.canada.ca">Canada.ca blog</a></h3>
-        <p>Evidence and insights on improving information and services on Canada.ca</p>
+        <h3 class="h5"><a href="#">Information architecture and findability</a></h3>
+        <p>Organizing content, metadata guidance, adding structured data</p>
       </div>
       <div class="col-md-4">
-        <h3 class="h5"><a href="">Research summaries</a></h3>
-        <p>Research done to make it easier for people to find and understand Government of Canada information and services</p>
+        <h3 class="h5"><a href="https://design.canada.ca/about/latest-changes.html">Latest changes to the Canada.ca design</a></h3>
+        <p>Latest changes to the design</p>
       </div>
 	  <div class="col-md-4">
-        <h3 class="h5"><a href="https://design.canada.ca/about/">About Canada.ca</a></h3>
-        <p>Most requested, analytics for Canada.ca, Government of Canada contacts</p>
+        <h3 class="h5"><a href="https://design.canada.ca/pattern-library.html">Templates and patterns</a></h3>
+        <p>User-tested templates, page layouts, design patterns, guidelines, and code samples</p>
       </div>
     </section>
   </div>
 </section>
-<!-- <section>
-  <h2>Find guidance</h2>
-  <div class="row mrgn-tp-md">
-    <div class="col-md-3 small">
-      <details open="">
-        <summary class="bg-primary text-center">Sources</summary>
-        <form class="wb-tables-filter mrgn-lft-md mrgn-rght-md" data-bind-to="design">
-          <div class="row">
-            <div class="form-group">
-              <fieldset>
-                <legend class="wb-inv"><span class="field-name">Sources</span></legend>
-                <ul class="list-unstyled">
-                  <li class="checkbox">
-                    <label for="dt_source1">
-                      <input type="checkbox" id="dt_source1" name="dt_source" data-column="1" value="Blog post" />
-                      Blog post</label>
-                  </li>
-                  <li class="checkbox">
-                    <label for="dt_source2">
-                      <input type="checkbox" id="dt_source2" name="dt_source" data-column="1" value="Content Style Guide" />
-                      Content Style Guide</label>
-                  </li>
-                  <li class="checkbox">
-                    <label for="dt_source3">
-                      <input type="checkbox" id="dt_source3" name="dt_source" data-column="1" value="Content and Information Architecture Specification" />
-                      Content and Information Architecture Specification</label>
-                  </li>
-                  <li class="checkbox">
-                    <label for="dt_source4">
-                      <input type="checkbox" id="dt_source4" name="dt_source" data-column="1" value="Designing content" />
-                      Designing content</label>
-                  </li>
-                  <li class="checkbox">
-                    <label for="dt_source5">
-                      <input type="checkbox" id="dt_source5" name="dt_source" data-column="1" value="Research summary" />
-                      Research summary</label>
-                  </li>
-                  <li class="checkbox">
-                    <label for="dt_source6">
-                      <input type="checkbox" id="dt_source6" name="dt_source" data-column="1" value="Template and pattern library" />
-                      Template and pattern library</label>
-                  </li>
-                </ul>
-              </fieldset>
-            </div>
-            <div class="col-md-12">
-              <button type="submit" class="btn btn-primary full-width" aria-controls="dataset-filter"><span class="fas fa-filter mrgn-rght-sm"></span> Filter</button>
-            </div>
-            <div class="col-md-12 mrgn-tp-md">
-              <button type="reset" class="btn btn-default full-width">Reset to defaults</button>
-            </div>
-          </div>
-        </form>
-      </details>
-    </div>
-    <div class="col-md-9">
-      <div class="panel panel-default">
-        <div class="mrgn-tp-md mrgn-bttm-md">
-          <table class="wb-tables table table-striped small mrgn-tp-lg brdr-tp" aria-live="polite" id="design" data-page-length="25" data-wb-tables="{
-            &quot;bDeferRender&quot;: true,
-            &quot;ajaxSource&quot;: &quot;./ajax/patterns-01-en.json&quot;,
-            &quot;order&quot;: [0, &quot;asc&quot;],
-            &quot;paging&quot;: true,
-            &quot;info&quot;: true,
-            &quot;columns&quot;: [
-            { &quot;data&quot;: &quot;NAME&quot;, &quot;className&quot;: &quot;&quot; },
-            { &quot;data&quot;: &quot;SOURCE&quot;, &quot;className&quot;: &quot;&quot; },
-            { &quot;data&quot;: &quot;DESCRIPTION&quot;, &quot;className&quot;: &quot;&quot;, &quot;orderable&quot;: false },
-            { &quot;data&quot;: &quot;WHENTOUSE&quot;,  &quot;visible&quot;: false },
-            { &quot;data&quot;: &quot;CATEGORY&quot;,  &quot;visible&quot;: false },
-            { &quot;data&quot;: &quot;TYPE&quot;,  &quot;visible&quot;: false },
-            { &quot;data&quot;: &quot;MANDATORY&quot;,  &quot;visible&quot;: false },
-            { &quot;data&quot;: &quot;TANDP&quot;,  &quot;visible&quot;: false }
-            ]
-            }">
-            <thead>
-              <tr>
-                <th class="col-md-05">Name</th>
-                <th class="col-md-02">Source</th>
-                <th class="col-md-05">Description</th>
-                <th>When to use this pattern</th>
-                <th>Category</th>
-                <th>Type</th>
-                <th>Mandatory</th>
-                <th>Tempalates and patterns</th>
-              </tr>
-            </thead>
-          </table>
-        </div>
-      </div>
-    </div>
-  </div>
-</section> -->
-
+<section>
+	<h2>What we're working on</h2>
+	<div class="row">
+		<div class="col-md-8">
+			<h3 class="h5"><a href="https://design-system.alpha.canada.ca/en/"><span class="label label-info">ALPHA</span> GC design system</a></h3>
+			<p>This is a new version of the design system. You can use it as a starting point for a website or application.
+			</p>
+		</div>
+	</div>
+</section>
 <section class="pagedetails">
 	<h2 class="wb-inv">Page details</h2><dl id="wb-dtmd">
 	<dt>Date modified:</dt>
