--- a/jmtesting/design-canada/specifications.html
+++ b/jmtesting/design-canada/specifications.html
@@ -169,7 +169,7 @@
         <p>Using evidence to design people-first and task-centred experiences.</p>
       </div>
       <div class="col-md-4">
-        <h3 class="h5"><a href="#">Information architecture and findability</a></h3>
+        <h3 class="h5"><a href="./information-findability.html">Information architecture and findability</a></h3>
         <p>Organizing content, metadata guidance, adding structured data</p>
       </div>
       <div class="col-md-4">
