--- a/jmtesting/design-canada/about.html
+++ b/jmtesting/design-canada/about.html
@@ -146,13 +146,15 @@
 
 </header>
 
-		<main class="container" property="mainContentOfPage" resource="#wb-main" typeof="WebPageElement">
+		<main class="" property="mainContentOfPage" resource="#wb-main" typeof="WebPageElement">
+			<div class="container">
 				<!-- Custom code starts here --><h1 property="name" id="wb-cont" property="name headline" dir="ltr">
 					<span class="stacked">
 						<span>About Canada.ca</span>: <span></span>
 					</span>
 				</h1><!-- Custom code ends here -->
 <p>Canada.ca is the Government of Canada’s digital presence. The goal of this site is to make it easier for Canadians to find and understand Government of Canada information and services.</p>
+</div>
 <section class="gc-most-requested">
 	<div class="container">
 		<h2>Most requested</h2>
@@ -165,6 +167,7 @@
 		</ul>
 	</div>
 </section>
+<div class="container">
 <section>
   <div class="row">
     <section class="wb-eqht gc-drmt">
@@ -197,7 +200,7 @@
 	<dd><time property="dateModified">2024-07-15</time></dd>
 </dl>
 </section>
-
+</div>
 </main>
 
 		<footer id="wb-info">
