--- a/jmtesting/design-canada/about.html
+++ b/jmtesting/design-canada/about.html
@@ -172,7 +172,7 @@
   <div class="row">
     <section class="wb-eqht gc-drmt">
       <div class="col-md-4">
-        <h3 class="h5"><a href="">Designing for Canada.ca</a></h3>
+        <h3 class="h5"><a href="index.html">Designing for Canada.ca</a></h3>
         <p>Canada.ca specifications, content style guide, information architecture and findability, continuous improvement, blog and research summaries</p>
       </div>
       <div class="col-md-4">
