--- a/jmtesting/design-canada/information-findability.html
+++ b/jmtesting/design-canada/information-findability.html
@@ -131,13 +131,19 @@
 				</a>
 				<meta property="position" content="1">
 			</li>
-<!-- 			
+			<li property="itemListElement" typeof="ListItem">
+				<a property="item" typeof="WebPage" href="./index.html">
+					<span property="name">Designing for Canada.ca</span>
+				</a>
+				<meta property="position" content="2">
+			</li>
+			
 						<li property="itemListElement" typeof="ListItem">
-							<a property="item" typeof="WebPage" href="/index.html">
-								<span property="name">Designing for Canada.ca</span>
+							<a property="item" typeof="WebPage" href="./specifications.html">
+								<span property="name">Canada.ca specifications</span>
 							</a>
 							<meta property="position" content="2">
-						</li> -->
+						</li>
 						
 		</ol>
 	</div>
