--- a/jmtesting/design-canada/specifications.html
+++ b/jmtesting/design-canada/specifications.html
@@ -131,13 +131,13 @@
 				</a>
 				<meta property="position" content="1">
 			</li>
-<!-- 			
+			
 						<li property="itemListElement" typeof="ListItem">
-							<a property="item" typeof="WebPage" href="/index.html">
+							<a property="item" typeof="WebPage" href="./index.html">
 								<span property="name">Designing for Canada.ca</span>
 							</a>
 							<meta property="position" content="2">
-						</li> -->
+						</li>
 						
 		</ol>
 	</div>
