--- a/jmtesting/design-canada/information-findability-fr.html
+++ b/jmtesting/design-canada/information-findability-fr.html
@@ -131,13 +131,19 @@
 				</a>
 				<meta property="position" content="1">
 			</li>
-<!-- 			
+			<li property="itemListElement" typeof="ListItem">
+				<a property="item" typeof="WebPage" href="./index.html">
+					<span property="name">Designing for Canada.ca</span>
+				</a>
+				<meta property="position" content="2">
+			</li>
+			
 						<li property="itemListElement" typeof="ListItem">
-							<a property="item" typeof="WebPage" href="/index.html">
-								<span property="name">Designing for Canada.ca</span>
+							<a property="item" typeof="WebPage" href="./specifications.html">
+								<span property="name">Canada.ca specifications</span>
 							</a>
 							<meta property="position" content="2">
-						</li> -->
+						</li>
 						
 		</ol>
 	</div>
@@ -146,50 +152,27 @@
 
 </header>
 
-		<main class="" property="mainContentOfPage" resource="#wb-main" typeof="WebPageElement">
-			<div class="container">
+		<main class="container" property="mainContentOfPage" resource="#wb-main" typeof="WebPageElement">
 				<!-- Custom code starts here --><h1 property="name" id="wb-cont" property="name headline" dir="ltr">
 					<span class="stacked">
-						<span>About Canada.ca</span>: <span></span>
+						<span>Information architecture and findability</span>: <span></span>
 					</span>
 				</h1><!-- Custom code ends here -->
-<p>Canada.ca is the Government of Canada’s digital presence. The goal of this site is to make it easier for Canadians to find and understand Government of Canada information and services.</p>
-</div>
-<section class="gc-most-requested">
-	<div class="container">
-		<h2>Most requested</h2>
-		<ul>
-			<li><a href="https://performance.alpha.canada.ca/">Page analytics tool</a></li>
-			<li><a href="https://www.canada.ca/en/analytics/recent-activity.html">Recent activity on Canada.ca</a></li>
-			<li><a href="https://design.canada.ca/pattern-library.html">Template and pattern library for Canada.ca</a></li>
-			<li><a href="https://design.canada.ca/about/top-tasks-for-canada-ca.html">Top tasks for Canada.ca</a></li>
-			<li><a href="./specifications.html">Canada.ca specifications</a></li>
-		</ul>
-	</div>
-</section>
-<div class="container">
+<p>Organize and structure webpages for findability and task success across Canada.ca.</p>
 <section>
   <div class="row">
     <section class="wb-eqht gc-drmt">
       <div class="col-md-4">
-        <h3 class="h5"><a href="index.html">Designing for Canada.ca</a></h3>
-        <p>Canada.ca specifications, content style guide, information architecture and findability, continuous improvement, blog and research summaries</p>
+        <h3 class="h5"><a href="https://design.canada.ca/architecture/organizing-content.htmll">Organizing content</a></h3>
+        <p>Themes and institutional navigation, URLs, sub-domains, content types and content states</p>
       </div>
       <div class="col-md-4">
-        <h3 class="h5"><a href="#">Canada.ca analytics</a></h3>
-        <p>Data on how people are interacting with the Government of Canada online</p>
+        <h3 class="h5"><a href="#">Metadata guidance</a></h3>
+        <p>Write effective metadata descriptions, add keywords, prioritize search optimization efforts</p>
       </div>
       <div class="col-md-4">
-        <h3 class="h5"><a href="https://www.canada.ca/en/contact.html">Government of Canada contacts</a></h3>
-        <p>Find contacts by department or program, most frequent contacts</p>
-      </div>
-      <div class="col-md-4">
-        <h3 class="h5"><a href="https://design.canada.ca/about/latest-changes.html">Latest changes to the Canada.ca design</a></h3>
-        <p>Latest changes to the design</p>
-      </div>
-	  <div class="col-md-4">
-        <h3 class="h5"><a href="https://design.canada.ca/pattern-library.html">Templates and patterns</a></h3>
-        <p>User-tested templates, page layouts, design patterns, guidelines, and code samples</p>
+        <h3 class="h5"><a href="https://design.canada.ca/guidance/structured-data.html">Adding structured data on Canada.ca pages</a></h3>
+        <p>How to add structured data, measure the impact, schema code and examples</p>
       </div>
     </section>
   </div>
@@ -200,7 +183,7 @@
 	<dd><time property="dateModified">2024-07-15</time></dd>
 </dl>
 </section>
-</div>
+
 </main>
 
 		<footer id="wb-info">
