--- a/jmtesting/design-canada/specifications-fr.html
+++ b/jmtesting/design-canada/specifications-fr.html
@@ -131,13 +131,13 @@
 				</a>
 				<meta property="position" content="1">
 			</li>
-<!-- 			
+			
 						<li property="itemListElement" typeof="ListItem">
-							<a property="item" typeof="WebPage" href="/index.html">
+							<a property="item" typeof="WebPage" href="./index.html">
 								<span property="name">Designing for Canada.ca</span>
 							</a>
 							<meta property="position" content="2">
-						</li> -->
+						</li>
 						
 		</ol>
 	</div>
@@ -146,42 +146,31 @@
 
 </header>
 
-		<main class="" property="mainContentOfPage" resource="#wb-main" typeof="WebPageElement">
-			<div class="container">
+		<main class="container" property="mainContentOfPage" resource="#wb-main" typeof="WebPageElement">
 				<!-- Custom code starts here --><h1 property="name" id="wb-cont" property="name headline" dir="ltr">
 					<span class="stacked">
-						<span>About Canada.ca</span>: <span></span>
+						<span>Canada.ca specifications</span>: <span></span>
 					</span>
 				</h1><!-- Custom code ends here -->
-<p>Canada.ca is the Government of Canada’s digital presence. The goal of this site is to make it easier for Canadians to find and understand Government of Canada information and services.</p>
-</div>
-<section class="gc-most-requested">
-	<div class="container">
-		<h2>Most requested</h2>
-		<ul>
-			<li><a href="https://performance.alpha.canada.ca/">Page analytics tool</a></li>
-			<li><a href="https://www.canada.ca/en/analytics/recent-activity.html">Recent activity on Canada.ca</a></li>
-			<li><a href="https://design.canada.ca/pattern-library.html">Template and pattern library for Canada.ca</a></li>
-			<li><a href="https://design.canada.ca/about/top-tasks-for-canada-ca.html">Top tasks for Canada.ca</a></li>
-			<li><a href="./specifications.html">Canada.ca specifications</a></li>
-		</ul>
-	</div>
-</section>
-<div class="container">
+<p>The Canada.ca design helps to provide a consistent and trustworthy online experience for people who access Government of Canada digital services.</p>
 <section>
   <div class="row">
     <section class="wb-eqht gc-drmt">
       <div class="col-md-4">
-        <h3 class="h5"><a href="index.html">Designing for Canada.ca</a></h3>
-        <p>Canada.ca specifications, content style guide, information architecture and findability, continuous improvement, blog and research summaries</p>
+        <h3 class="h5"><a href="https://design.canada.ca/architecture/usage-canadaca-design.html">Who has to use the Canada.ca design</a></h3>
+        <p>Scope of the Canada.ca design</p>
       </div>
       <div class="col-md-4">
-        <h3 class="h5"><a href="#">Canada.ca analytics</a></h3>
-        <p>Data on how people are interacting with the Government of Canada online</p>
+        <h3 class="h5"><a href="https://design.canada.ca/architecture/mandatory-elements.html">Mandatory elements</a></h3>
+        <p>Colours, typography, header and footer, mandatory templates</p>
       </div>
       <div class="col-md-4">
-        <h3 class="h5"><a href="https://www.canada.ca/en/contact.html">Government of Canada contacts</a></h3>
-        <p>Find contacts by department or program, most frequent contacts</p>
+        <h3 class="h5"><a href="https://design.canada.ca/architecture/templates.html">Design principles</a></h3>
+        <p>Using evidence to design people-first and task-centred experiences.</p>
+      </div>
+      <div class="col-md-4">
+        <h3 class="h5"><a href="./information-findability.html">Information architecture and findability</a></h3>
+        <p>Organizing content, metadata guidance, adding structured data</p>
       </div>
       <div class="col-md-4">
         <h3 class="h5"><a href="https://design.canada.ca/about/latest-changes.html">Latest changes to the Canada.ca design</a></h3>
@@ -194,13 +183,23 @@
     </section>
   </div>
 </section>
+<section>
+	<h2>What we're working on</h2>
+	<div class="row">
+		<div class="col-md-8">
+			<h3 class="h5"><a href="https://design-system.alpha.canada.ca/en/"><span class="label label-info">ALPHA</span> GC design system</a></h3>
+			<p>This is a new version of the design system. You can use it as a starting point for a website or application.
+			</p>
+		</div>
+	</div>
+</section>
 <section class="pagedetails">
 	<h2 class="wb-inv">Page details</h2><dl id="wb-dtmd">
 	<dt>Date modified:</dt>
 	<dd><time property="dateModified">2024-07-15</time></dd>
 </dl>
 </section>
-</div>
+
 </main>
 
 		<footer id="wb-info">
