--- a/jmtesting/design-canada/about-fr.html
+++ b/jmtesting/design-canada/about-fr.html
@@ -54,7 +54,7 @@
 	<h2 class="wb-inv">Sélection de la langue</h2>
 	<ul class="list-inline mrgn-bttm-0">
 		<li>
-			<a lang="en" hreflang="en" href="https://design.canada.ca/about/">
+			<a lang="en" hreflang="en" href="about.html">
 				<span class="hidden-xs" translate="no">English</span>
 				<abbr title="English" translate="no" class="visible-xs h3 mrgn-tp-sm mrgn-bttm-0 text-uppercase">en</abbr>
 			</a>
