--- a/jmtesting/design-canada/specifications.html
+++ b/jmtesting/design-canada/specifications.html
@@ -54,7 +54,7 @@
 	<h2 class="wb-inv">Language selection</h2>
 	<ul class="list-inline mrgn-bttm-0">
 		<li>
-			<a lang="fr" hreflang="fr" href="https://conception.canada.ca">
+			<a lang="fr" hreflang="fr" href="specifications-fr.html">
 				<span class="hidden-xs" translate="no">Français</span>
 				<abbr title="Français" translate="no" class="visible-xs h3 mrgn-tp-sm mrgn-bttm-0 text-uppercase">fr</abbr>
 			</a>
